--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <title>Aidel Techologies</title>
 
-    <link rel="shortcut icon" href=" assets/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
 
     <link rel="stylesheet" type="text/css" href=" assets/css/themify-icons.css">
 
@@ -50,7 +50,7 @@
         <!-- Navbar -->
         <div class="navbar navbar-expand-lg navbar-dark sticky" data-offset="500">
             <div class="container">
-                <a href="" class="navbar-brand"><label class="logoTxt" style="font-size: 23px;">Aidel</label><img class="ardillaL" src=" assets/img/logo/ardilla.png" alt=""></a>
+                <a href="" class="navbar-brand"><label class="logoTxt" style="font-size: 23px;"></label><img class="ardillaL" src="assets/img/logo/LogoIndex.png" alt=""></a>
                 <button class="navbar-toggler" data-toggle="collapse" data-target="#main-navbar" aria-expanded="true">
           <span class="ti-menu"></span>
         </button>
@@ -298,7 +298,7 @@
 
 
 
-    <!--div class="vg-page page-service">
+    <div class="vg-page page-service">
         <div class="container">
             <div class="text-center wow fadeInUp">
                 <div class="badge badge-subhead">Service</div>
@@ -308,50 +308,50 @@
                 <div class="col-md-6 col-lg-4 col-xl-3">
                     <div class="card card-service wow fadeInUp">
                         <div class="icon">
-                            <span class="ti-paint-bucket"></span>
+                            <img style="width: 60px;" src="assets/img/technologies/backend.png" alt="">
                         </div>
                         <div class="caption">
-                            <h4 class="fg-theme">Web Design</h4>
-                            <p>There are many variations of passages of Lorem Ipsum available</p>
+                            <h4 class="fg-theme">Back-End</h4>
+                            <p>Desarrollo web con diferentes tecnologías como lo son: Laravel, .Net, Flask, Lumen, Spring, Express JS, Next JS, Nest JS, entre otros.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 col-xl-3">
                     <div class="card card-service wow fadeInUp">
                         <div class="icon">
-                            <span class="ti-search"></span>
+                            <img style="width: 60px;" src="assets/img/technologies/ux.png" alt="">
                         </div>
                         <div class="caption">
-                            <h4 class="fg-theme">SEO</h4>
-                            <p>There are many variations of passages of Lorem Ipsum available</p>
+                            <h4 class="fg-theme">Front-End</h4>
+                            <p>Diseño de aplicaciones web o móviles con tecnologías como: Angula, React, React Native, Ionic, Vue JS, Node Js, WordPress, Wix, Drupal, entre otros.    </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 col-xl-3">
                     <div class="card card-service wow fadeInUp">
                         <div class="icon">
-                            <span class="ti-vector"></span>
+                            <img style="width: 60px;" src="assets/img/technologies/soporte-tecnico.png" alt="">
                         </div>
                         <div class="caption">
-                            <h4 class="fg-theme">UI/UX Design</h4>
-                            <p>There are many variations of passages of Lorem Ipsum available</p>
+                            <h4 class="fg-theme">Soporte</h4>
+                            <p>Soporte en aplicaciones ya desarrolladas: desarrollo web, desarrollo móvil, rediseños de sitios web, etc… </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 col-xl-3">
                     <div class="card card-service wow fadeInUp">
                         <div class="icon">
-                            <span class="ti-desktop"></span>
+                            <img style="width: 60px;" src="assets/img/technologies/diseno-grafico.png" alt="">
                         </div>
                         <div class="caption">
-                            <h4 class="fg-theme">Web Development</h4>
-                            <p>There are many variations of passages of Lorem Ipsum available</p>
+                            <h4 class="fg-theme">Diseño Gráfico</h4>
+                            <p>Soporte en errores de colores, logos, logotipos, maquetación, responsive sobre proyectos ya realizados o nuevos.  </p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div-->
+    </div>
     
 
     
@@ -623,44 +623,44 @@
             <div class="row">
                 <div class="col-md-6 col-lg-4 col-xl-3 item">
                     <div class="img-place wow fadeInUp">
-                        <img src=" assets/img/logo/company_1.svg" alt="">
+                        <img src="assets/img/logo/java.png" alt="">
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 col-xl-3 item">
                     <div class="img-place wow fadeInUp">
-                        <img src=" assets/img/logo/company_2.svg" alt="">
+                        <img src="assets/img/logo/php (1).png" alt="">
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 col-xl-3 item">
                     <div class="img-place wow fadeInUp">
-                        <img src=" assets/img/logo/company_3.svg" alt="">
+                        <img src="assets/img/logo/piton.png" alt="">
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 col-xl-3 item">
                     <div class="img-place wow fadeInUp">
-                        <img src=" assets/img/logo/company_4.svg" alt="">
+                        <img src="assets/img/logo/brands.png" alt="">
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 col-lg-4 col-xl-3 item">
                     <div class="img-place wow fadeInUp">
-                        <img src=" assets/img/logo/company_5.svg" alt="">
+                        <img src="assets/img/logo/wordpress.png" alt="">
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 col-xl-3 item">
                     <div class="img-place wow fadeInUp">
-                        <img src=" assets/img/logo/company_6.svg" alt="">
+                        <img src="assets/img/logo/mysql.png" alt="">
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 col-xl-3 item">
                     <div class="img-place wow fadeInUp">
-                        <img src=" assets/img/logo/company_7.svg" alt="">
+                        <img src="assets/img/logo/nodo-js.png" alt="">
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 col-xl-3 item">
                     <div class="img-place wow fadeInUp">
-                        <img src=" assets/img/logo/company_8.svg" alt="">
+                        <img src="assets/img/logo/androide.png" alt="">
                     </div>
                 </div>
             </div>
@@ -668,7 +668,7 @@
     </div>
     <!-- End client -->
 
-    <!-- Blog -->
+    <!-- Blog
     <div class="vg-page page-blog" id="blog">
         <div class="container">
             <div class="text-center">
@@ -718,7 +718,7 @@
             </div>
         </div>
     </div>
-    <!-- End blog -->
+  End blog -->
 
     <!-- Contact -->
     <div class="vg-page page-contact" id="contact">
