Correcciones - Secciones Quien Somos - Menu

--- a/index.html
+++ b/index.html
@@ -63,10 +63,7 @@
                             <a href="#about" class="nav-link" data-animate="scrolling">Sobre nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#portfolio" class="nav-link" data-animate="scrolling">Servicios</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#blog" class="nav-link" data-animate="scrolling">Blog</a>
+                            <a href="#service" class="nav-link" data-animate="scrolling">Servicios</a>
                         </li>
                         <li class="nav-item">
                             <a href="#contact" class="nav-link" data-animate="scrolling">Contacto</a>
@@ -241,7 +238,7 @@
     </div>
 
 
-    <div class="vg-page page-service">
+    <!--div class="vg-page page-service" id="">
         <div class="container">
             <div class="text-center wow fadeInUp">
                 <div class="badge badge-subhead">Nosotros</div>
@@ -262,14 +259,14 @@
 
             </div>
         </div>
-    </div>
+    </div-->
 
-    <div class="vg-page page-service">
+    <div class="vg-page page-service" id="about">
         <div class="container">
             <div class="text-center wow fadeInUp">
                 <div class="badge badge-subhead">Nosotros</div>
             </div>
-            <h1 class="fw-normal text-center wow fadeInUp">¿Que sabemos hacer?</h1>
+            <h1 class="fw-normal text-center wow fadeInUp">¿Sobre Nosotros?</h1>
             <div class="row mt-6">
                 <div class="col-lg-12 ">
                     <div class="card card-service wow fadeInUp">
@@ -298,7 +295,7 @@
 
 
 
-    <div class="vg-page page-service">
+    <div class="vg-page page-service" id="service">
         <div class="container">
             <div class="text-center wow fadeInUp">
                 <div class="badge badge-subhead">Service</div>
